NPOT textures don't work on web, oh no